# simple_pybind11_python_library

./: CMakeLists.txt  LICENSE  README.md  setup.py  test.py
include/: mymath.hpp
src/: bindings.cpp  mymath.cpp
